Fix bugs C28-C36 from bug hunt round 3
- Implemented atomic month closing and role restrictions (C28)
- Added month reopening functionality (C30)
- Enforced hard lock across all entities for closed months (C33)
- Corrected unbilled record logic and checklist (C34)
- Grouped unbilled items by customer on the checklist (C35, C36)
- Enhanced UI components with status checks (C31, C32)